--- a/RedBitmapHelpers/Red.BitmapHelpers.csproj
+++ b/RedBitmapHelpers/Red.BitmapHelpers.csproj
@@ -46,5 +46,8 @@
     <Compile Include="RedHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="PublishedFile\Red.BitmapHelper.1.0.0.nupkg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
